Fix dark mode color issues

--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -1,14 +1,21 @@
 // @types
 
+
 .projcard {
+	--projcard-innerBg: var(--nextui-colors-backgroundContrast, #FFFFFF);
+	--projcard-border: var(--nextui-colors-neutralBorder, #DDDDDD);
+	--projcard-textGray1: var(--nextui-colors-gray900, #11181C);
+	--projcard-textGray2: var(--nextui-colors-gray700, #7E868C);
+	--projcard-tagBg: var(--nextui-colors-gray300, #DFE3E6);
+	--projcard-tagText: var(--nextui-colors-gray800, #DFE3E6);
 	position: relative;
 	width: 100%;
 	height: 300px;
 	margin-bottom: 40px;
 	border-radius: 10px;
-	background-color: #fff;
+	background-color: var(--projcard-innerBg);
 	box-sizing: border-box;
-	border: 2px solid #ddd;
+	border: 2px solid var(--projcard-border);
 	font-size: 18px;
 	overflow: hidden;
 	cursor: pointer;
@@ -30,7 +37,7 @@
 		bottom: 0;
 		left: 0;
 		background-image: linear-gradient(-70deg, #424242, transparent 50%);
-		opacity: 0.07;
+		opacity: 0.08;
 	}
 	&.projcardRight::before {
 		background-image: linear-gradient(-250deg, #424242, transparent 50%);
@@ -152,8 +159,7 @@
 	content: "";
 	position: absolute;
 	display: block;
-	background: #ff0000bb;
-	background: #fff;
+	background: var(--projcard-innerBg);
 	top: -20%;
 	left: -55px;
 	height: 140%;
@@ -187,15 +193,17 @@
 }
 .projcardSubtitle {
 	font-family: Voces, Arial, sans-serif;
-	color: #888;
+	color: var(--projcard-textGray2);
 }
 .projcardDescription {
+	--projcard-lineHeight: 1.5;
 	position: relative;
 	display: -webkit-box;
 	z-index: 1;
-	font-size: 17px;
-	color: #424242;
-	height: 125px;
+	font-size: 1rem;
+	line-height: var(--projcard-lineHeight);
+	color: var(--projcard-textGray1);
+	height: calc(5 * 1em * var(--projcard-lineHeight));
 	overflow: hidden;
 	text-overflow: ellipsis;
 	line-clamp: 5;
@@ -213,11 +221,11 @@
 }
 .projcardTag {
 	display: inline-block;
-	background: #E0E0E0;
-	color: #777;
+	background: var(--projcard-tagBg);
+	color: var(--projcard-tagText);
 	border-radius: 3px 0 0 3px;
 	line-height: 26px;
-	padding: 0 10px 0 23px;
+	padding: 0 16px 0 10px;
 	position: relative;
 	margin-right: 20px;
 	cursor: default;
@@ -226,11 +234,11 @@
 	&::before {
 		content: "";
 		position: absolute;
-		background: #fff;
+		background: var(--projcard-innerBg);
 		border-radius: 10px;
 		box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
 		height: 6px;
-		left: 10px;
+		right: 2px;
 		width: 6px;
 		top: 10px;
 	}
@@ -238,7 +246,7 @@
 		content: "";
 		position: absolute;
 		border-bottom: 13px solid transparent;
-		border-left: 10px solid #E0E0E0;
+		border-left: 10px solid var(--projcard-tagBg);
 		border-top: 13px solid transparent;
 		right: -10px;
 		top: 0;
