--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -149,7 +149,7 @@ center.whatido_box {
 	border-radius: 70% 30% 60% 40%/45% 36% 64% 55%;
 }
 .blob:nth-child(2) {
-	background: radial-gradient(circle, transparent 30%, white 30%) 0 0/20px 20px repeat, linear-gradient(to right, transparent 47%, #999 47%, #999 53%, transparent 53%) 0/20px 20px repeat, linear-gradient(to bottom, transparent 47%, #999 47%, #999 53%, transparent 53%) 0 0/20px 20px repeat;
+	background: radial-gradient(circle, transparent 30%, var(--nextui-colors-background, white) 30%) 0 0/20px 20px repeat, linear-gradient(to right, transparent 47%, #999 47%, #999 53%, transparent 53%) 0/20px 20px repeat, linear-gradient(to bottom, transparent 47%, #999 47%, #999 53%, transparent 53%) 0 0/20px 20px repeat;
 	border-radius: 48% 52% 24% 76%/38% 47% 53% 62%;
 }
 .blob:nth-child(3) {
@@ -169,7 +169,7 @@ center.whatido_box {
 	border-radius: inherit;
 	top: -8%;
 	right: -8%;
-	box-shadow: 0 0 0 6px #FFF;
+	box-shadow: 0 0 0 6px var(--nextui-colors-background, white);
 }
 .blob:nth-child(1)::before {
 	background: linear-gradient(to right, #313131, #505050);
